--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Technical Interview</title>
+  <title>Kacper Mitkowski - Technical Exercise</title>
 </head>
 <body>
     <div id="app"></div>
