--- a/frontend/static/css/main.css
+++ b/frontend/static/css/main.css
@@ -1,14 +1,20 @@
 .doctors-pagination-bar-container {
-    background-color: red;
+    background-color: #4259b3;
     display: flex;
 }
 
+table tr:nth-child(even) {
+    background-color: #ddd !important;
+}
+
 .pagination-element {
-    padding: 25px;
+    padding: 20px;
     border: 1px solid #000;
     cursor: pointer;
+    font-size: 20px;
 }
 
 .active-element {
     background-color: yellow;
+    font-size: 1.5em;
 }
