--- a/frontend/static/css/main.css
+++ b/frontend/static/css/main.css
@@ -18,3 +18,10 @@ table tr:nth-child(even) {
     background-color: yellow;
     font-size: 1.5em;
 }
+
+.go-to-index-div {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
